Added 2 test images

--- a/src/content/post/markdown-elements-demo-post.mdx
+++ b/src/content/post/markdown-elements-demo-post.mdx
@@ -13,6 +13,10 @@ import { YouTube, Tweet, Vimeo } from 'astro-embed';
 
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
+![Super wide2](https://res.cloudinary.com/paulapplegate-com/image/fetch/v1718311039/https://user-images.githubusercontent.com/1045274/202030788-2c37dd75-f4c4-406a-8fbb-c8d622bf0dae.jpg)
+
+![The one and only Luke](https://res.cloudinary.com/paulapplegate-com/image/upload/v1716415507/Luck-copy_stoeog.jpg)
+
 ## <a name="Headings"></a>Headings
 
 Sint sit cillum pariatur eiusmod nulla pariatur ipsum. Sit laborum anim qui mollit tempor pariatur nisi minim dolor. Aliquip et adipisicing sit sit fugiat commodo id sunt. Nostrud enim ad commodo incididunt cupidatat in ullamco ullamco Lorem cupidatat velit enim et Lorem. Ut laborum cillum laboris fugiat culpa sint irure do reprehenderit culpa occaecat. Exercitation esse mollit tempor magna aliqua in occaecat aliquip veniam reprehenderit nisi dolor in laboris dolore velit.
